k8s-app-kustomize/environments/prod/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001 ##30001 for production
