k8s-app-kustomize/environments/prod/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik # Use this field instead of the annotation
  rules:
    - host: localhost
      http:
        paths:
          - path: /prod
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
